Fix "new Integer" lint warnings